--- a/index.html
+++ b/index.html
@@ -11,10 +11,23 @@
 </head>
 
 <body>
-<p class="STYLE1">臧超hub站点</p>
-<p class="STYLE1">
-  <!-- #BeginDate format:Ch2a -->2014年7月30日  3:13 PM<!-- #EndDate -->
-</p>
+<table width="650" border="0" align="center">
+  <tr>
+    <td width="644"><div align="center">
+      <p class="STYLE1">臧超hub站点</p>
+      <p class="STYLE1">
+        <!-- #BeginDate format:Ch2a -->
+        2014年7月30日  3:13 PM
+        <!-- #EndDate -->
+      </p>
+      <hr />
+      <p class="STYLE1">链接</p>
+      <p class="STYLE1"><a href="http://www.superchao.info" target="_blank">臧超博客</a></p>
+    </div></td>
+  </tr>
+</table>
+<p class="STYLE1">&nbsp;</p>
+<p class="STYLE1">&nbsp;</p>
 <p class="STYLE1">&nbsp;</p>
 </body>
 </html>
