--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <hr />
       <p class="STYLE1"><img src="http://image227.poco.cn/mypoco/myphoto/20140803/16/17332551120140803163827082.gif?150x107_110" width="150" height="107" /></p>
       <p class="STYLE1">链接</p>
-      <p class="STYLE1"><a href="http://www.superchao.info" target="_blank">臧超博客</a></p>
+      <p class="STYLE1"><a href="http://www.geooll.com" target="_blank">臧超博客</a></p>
     </div></td>
   </tr>
 </table>
